--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.2",
-    "react-timer-mixin": "^0.13.4"
+    "react-redux": "^6.0.1",
+    "react-timer-mixin": "^0.13.4",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
