--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.2",
+    "react-native": "^0.59.3",
+    "react-native-vector-icons": "^6.4.2",
     "react-redux": "^6.0.1",
     "react-timer-mixin": "^0.13.4",
     "redux": "^4.0.1"
