--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,10 +138,13 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:design:27.1.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-vector-icons')
+    compile fileTree(dir: "libs", include: ["*.jar"]) 
+    compile project(':react-native-vector-icons') 
+    compile project(':react-native-navigation') 
 }
 
 // Run this once to be able to run the application with BUCK
