--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,13 +138,19 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile fileTree(dir: "libs", include: ["*.jar"]) 
     compile project(':react-native-vector-icons') 
-    compile project(':react-native-navigation') 
+    compile project(':react-native-navigation')
+    implementation(project(':react-native-maps')){
+       exclude group: 'com.google.android.gms', module: 'play-services-base'
+       exclude group: 'com.google.android.gms', module: 'play-services-maps'
+   }
+   implementation 'com.google.android.gms:play-services-base:16.1.0'
+   implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
 
 // Run this once to be able to run the application with BUCK
