--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-vector-icons": "^6.4.2",
     "react-redux": "^6.0.1",
     "react-timer-mixin": "^0.13.4",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
