Image upload function.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@google-cloud/storage": "1.7.0",
     "react": "16.8.3",
     "react-native": "^0.59.6",
     "react-native-image-picker": "^0.28.1",
@@ -17,7 +18,8 @@
     "react-redux": "^6.0.1",
     "react-timer-mixin": "^0.13.4",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
