--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,9 +138,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+   implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-media-compat:28.0.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile fileTree(dir: "libs", include: ["*.jar"]) 
     compile project(':react-native-vector-icons') 
